crates/forge_app/src/snapshots/forge_app__operation__tests__fs_undo_file_created.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# File Undo

- **Path**: /home/user/new_file.txt
- **Status**: Created
- **Total Lines**: 3

```
New file content
Line 2
Line 3
```
