crates/forge_app/src/snapshots/forge_app__operation__tests__fs_undo_file_removed.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# File Undo

- **Path**: /home/user/deleted_file.txt
- **Status**: Removed
- **Total Lines**: 3

```
Original file content
That was deleted
During undo
```
