crates/forge_app/src/snapshots/forge_app__operation__tests__fs_undo_no_changes.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# File Undo

- **Path**: /home/user/unchanged_file.txt
- **Status**: No_changes
