crates/forge_app/src/snapshots/forge_app__operation__tests__fs_undo_success.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<file_undo
  path="/home/user/test.txt"
  status="restored"
><![CDATA[1        |-PQR
    1    |+ABC
]]>
</file_undo>
