crates/forge_app/src/snapshots/forge_app__operation__tests__net_fetch_success.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Http Response

- **Url**: Https://example.com
- **Status Code**: 200
- **Start Char**: 0
- **End Char**: 55
- **Total Chars**: 55
- **Content Type**: Text/plain

## Body

```
# Example Website

This is some content from a website.
```
