crates/forge_app/src/snapshots/forge_app__operation__tests__net_fetch_truncated.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
# Http Response

- **Url**: Https://example.com/large-page
- **Status Code**: 200
- **Start Char**: 0
- **End Char**: 55
- **Total Chars**: 72
- **Content Type**: Text/markdown

## Body

```
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
```

## Truncated

Content is truncated to 55 chars, remaining content can be read from path: /tmp/forge_fetch_abc123.txt
