crates/forge_app/src/snapshots/forge_app__operation__tests__search_report_chunk_merging.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
The following code sections were retrieved:

File Path: src/auth.rs
   10 fn authenticate_user(token: &str) -> Result<User> {
   11     verify_jwt(token)
   12 }
...

File Path: src/retry.rs
   10 fn retry_with_backoff(max_attempts: u32) {
   11     let mut delay = 100;
   12 }
...
   50 fn exponential_backoff(attempt: u32) -> Duration {
   51     Duration::from_millis(2_u64.pow(attempt) * 100)
   52 }
...
