crates/forge_app/src/snapshots/forge_app__operation__tests__search_report_empty.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
<search_report_results>No code sections were retrieved.</search_report_results>
