crates/forge_app/src/snapshots/forge_app__operation__tests__search_report_empty_chunks.snap
---
source: crates/forge_app/src/operation.rs
expression: to_value(actual)
---
No code sections were retrieved.
